# snake

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  Makefile.old  ReadMe.txt
CMakeModules/: FindAllegro.cmake
Src/: CMakeLists.txt  List.cpp  Main.cpp  list.h  main.c
src/: list.c  main.c
